@@ -1,3 +1,5 @@
+2006/5/4 -- released version 20060504_trunk
+
 2006/5/3 -- released version 20060503_trunk
 
 2006/5/2 -- released version 20060502_trunk
